# Turnstiles_Fare_Evasion

./: .gitignore  CMakeLists.txt  README.md
config/: deepsort_config.txt
detections/yolov5_tensorrtx/: yololayer.h  yolov5.cpp
src/app/include/: param.h  utility.h
src/app/src/: main.cpp  param.cpp
src/detection/include/: detection.h
src/detection/src/: detection.cpp  yolov5.cu
src/features/src/: FeatureTensor.cpp
test/build_deepsort_engine/: CMakeLists.txt  common.h  logging.h  mars.cpp
test/gen_wts_deepsort/: gen_wts.py  inspect_ckpt.py  load_tf_model.py
test/test_Infer2Features/: CMakeLists.txt  Features.h  main.cpp
